--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,18 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+html, body {
+    background-color: #23252a;
+    color: #fff;
+    font-family: Arial;
+    font-size: 17px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.btn-primary {
+    border-radius: 5px;
+    background: #d4e0fe;
+    border: 0;
+    cursor: pointer;
+    padding: 5px 20px;
+}
+
+.btn-primary + .btn-primary {
+    margin-left: 10px;
 }
